# pre-commit-hooks

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  README.md  pyproject.toml
.github/: pull_request_template.md
docs/: conf.py  index.rst
src/pre_commit_hooks/: __about__.py  __init__.py  check_header_footer.py  util.py
src/pre_commit_hooks/arabic_presentation_form/: __init__.py  __main__.py  char_map.py
tests/: __init__.py  conftest.py  ruff.toml  test_util.py  test_version.py
tests/arabic_presentation_form/: __init__.py  test_arabic_presentation_form.py
tests/check_header_footer/: __init__.py  test_check_header_footer.py
tests/samples/: .gitignore
